# gitpr

./: .envrc  .tasks  Cargo.toml  README.md  Taskfile.yml  justfile  rustfmt.toml
benches/: bench.rs
src/: logger.rs  main.rs  tests.rs  util.rs
