[package]
name = "gitpr"
description = "Git repo status for your prompt"
version = "0.1.0"
authors = ["Nick Murphy <comfortablynick@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
termcolor = "1.1.0"
anyhow = "1.0.32"
ansi_term = "0.12"

[dev-dependencies]
pretty_assertions = "0.6"
