[package]
name = "gitpr"
description = "Git repo status for your prompt"
version = "0.1.0"
authors = ["Nick Murphy <comfortablynick@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
anyhow = "1.0.32"
ansi_term = "0.12.1"

# [dev-dependencies] # uncomment to exclude from docs
pretty_assertions = "0.6.1"
duct = "0.13.4"
criterion = "0.3.3"

[[bench]]
name = "bench"
harness = false
